# policy

./: README.md  pyproject.toml  test.md
docs/: architecture.md  calibration.md  experiments.md  testing.md  theory.md
examples/: basic_example.py  calibration_example.py  policy_containment.py
policy/: __init__.py  boundaries.py  config.py  container.py  metrics.py
recursive_stability/: analysis.py  config.py  db.py  energy.py  forensic_logger.py  maiun.py  model.py  policy.py  recursive_stability.codebase.md  runner.py  signal_discovery.py
src/policy/: base_policy.py  calibration.py  cli.py  custom_types.py  decision.py  energy_spiral_detector.py  gate.py  governance_signal.py  monitor.py  policy_container.py  thresholds.py
src/policy/adapters/: certum_adapter.py  certum_geometry.py  geometry_adapter.py
src/policy/axes/: axis_config.py  bundle.py  difficulty.py  energy.py  engine.py  participation_ratio.py  sensitivity.py
src/policy/calibrator/: adaptive_calibrator.py
src/policy/embedding/: embedding_store.py  hf_embedder.py  sqlite_embedding_backend.py
src/policy/experiments/: benchmark.py  pipeline.py  plotting.py  runaway_experiment.py  runaway_report.py
src/policy/geometry/: claim_evidence.py  nli_wrapper.py  sentence_support.py  support_types.py
src/policy/learning/: adaptive_policy.py
src/policy/monitoring/: dominance.py  stability_monitor.py
src/policy/orchestration/: summarization_runner.py
src/policy/protocols/: ai.py  axes.py  calibration.py  embedder.py  embedding_backend.py  evidence_store.py  gate.py  geometry.py  governance.py  policy.py  scoring.py
src/policy/utils/: dict_utils.py  math_utils.py  text_utils.py
tests/: conftest.py  test_boundaries.py  test_calibrator.py  test_config.py  test_container.py  test_distribution_separation.py  test_drift_detection.py  test_metrics.py  test_policy_container.py  test_runaway_experiment.py  test_zspace_invariant.py
