[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-governor"
version = "0.1.0"
description = "A model-agnostic AI governance container with dynamic calibration and drift detection."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ernan Hughes", email = "ernanhughes@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "scipy>=1.10",
    "numpy>=1.24",
    "matplotlib>=3.7"
]

keywords = [
    "AI",
    "governance",
    "policy",
    "hallucination",
    "calibration",
    "drift-detection",
    "AI safety",
    "risk control"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/ernanhughes/policy"
Documentation = "https://github.com/ernanhughes/policy"
Repository = "https://github.com/ernanhughes/policy"

[tool.setuptools.packages.find]
where = ["src"]
include = ["policy*"]

[project.scripts]
policy-run = "policy.cli:main"
